# SkillSync

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE  README.md  SECURITY.md  booking_system.py  create_event.py  crud.py  events.py  get_events.py  helper.py  main.py  models.py  pyproject.toml  requirements.txt  sample_data.py  skillsync.db  skillsync.py  skillsync.spec  test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/docs/: pull_request_template.md
.github/workflows/: ci.yml
